<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_spotify"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="36dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:elegantTextHeight="false"
        android:background="@color/accent_material_light"
        android:onClick="clickSpotify" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scores"
        android:id="@+id/button2"
        android:background="@color/accent_material_light"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:onClick="clickScores" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_library"
        android:id="@+id/button3"
        android:background="@color/accent_material_light"
        android:singleLine="false"
        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
        android:layout_below="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:onClick="clickLibrary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_buildit"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:background="@color/accent_material_light"
        android:onClick="clickBuildit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_xyxreader"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:background="@color/accent_material_light"
        android:onClick="clickXyzreader" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:background="@color/primary_dark_material_light"
        android:onClick="clickCapstone" />

</RelativeLayout>
